--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -54,11 +54,11 @@ function initialize(lat, lon, nombre, id) {
         <div id="page-heading">
                 <ol class="breadcrumb">
                     <li><a href="<?php echo BASE_URL . 'sistema'; ?>">Inicio</a></li>
-                    <li class="active">B&uacute;squeda de hoteles</li>
+                    <li class="active">BUSCAR</li>
                 </ol>
 
 
-                <h1>B&uacute;squeda de hoteles</h1>
+                <h1>Hoteles en </h1>
             </div>
                 <?php 
                 
