--- a/views/programa/adminProgramas.phtml
+++ b/views/programa/adminProgramas.phtml
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="<?php echo BASE_URL ?>public/js/tinymce/tinymce.min.js"></script>
 <div id="page-content">
 	<div id='wrap'>
             <div id="page-heading">
@@ -119,10 +120,10 @@
                             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatables" id="example">
                                 <thead>
                                     <tr style="background-color:#76c4ed;">
-                                        <th>Codigo</th>
+                                        <th>C&oacute;digo</th>
                                         <th>Nombre</th>
                                         <th>Ciudad</th>
-                                        <th width="100">Subir PDF</th>
+                                        <th width="100"></th>
                                         <th width="100">Ver PDF</th>
                                     </tr>
                                 </thead>
@@ -161,47 +162,45 @@
                                            $texto_cambiado = str_replace(" ", "_",$aP_codigoProg);  
                                            $nomArchivo = ROOT. DS .'public'. DS .'pdf'. DS .'upl_'.$texto_cambiado.'.pdf';
                                            
-                                           if (file_exists($nomArchivo)) 
-                                           {  
-                                              
-                                           ?>
-                    
-                                           <td align="center">
-                                           <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/subirPdf', 'Eliminar Archivo', '<?php echo $aP_codigoProg; ?>');">
-                                           <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
-                                           </a></td>
-                                           <?php
-                                           }
+                                           //if (file_exists($nomArchivo)) 
+                                           //{                                             
+                                                ?>
+                                                <td align="center">
+                                                <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/subirPdf', 'Administraci&oacute;n de archivos y fotos', '<?php echo $aP_codigoProg; ?>');">
+                                                <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
+                                                </a></td>
+                                                <?php
+                                           //}
+                                                /*
                                            else
                                            {
-                                           ?>
-                                           <td align="center">
-                                           <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/subirPdf', 'Subir Archivo', '<?php echo $aP_codigoProg; ?>');">
-                                           <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
-                                           </a></td>    
-                                           <?php    
-                                               
-                                           }
+                                                ?>
+                                                <td align="center">
+                                                <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/subirPdf', 'Subir Archivo', '<?php echo $aP_codigoProg; ?>');">
+                                                <img src="<?php echo $_layoutParams['ruta_img']; ?>edit.png" width="24" border="0" />
+                                                </a></td>    
+                                                <?php                                                  
+                                           }*/
                                            if (file_exists($nomArchivo)) 
                                            {  
-                                              
-                                           ?>
-                                           
-                                           <td align="center">
-                                           <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/verPDF', 'Ver Pdf', '<?php echo $aP_codigoProg; ?>');">
-                                           <img src="<?php echo $_layoutParams['ruta_img']; ?>pdf.png" width="24" border="0" />
-                                           </a></td>
-                                           <?php
-                                           
+                                                ?>
+                                                <td align="center">
+                                                <a data-toggle="modal" href="#myModal" onClick="Programas.prototype.abrePopupCenter('<?php echo BASE_URL ?>programa/verPDF', 'Ver Pdf', '<?php echo $aP_codigoProg; ?>');">
+                                                <img src="<?php echo $_layoutParams['ruta_img']; ?>pdf.png" width="24" border="0" />
+                                                </a></td>
+                                                <?php  
                                            }  
                                             else{
                                                 
-                                            ?> 
-                                           <td align="center">
-                                                
-                                           </td>
-                                            <?php     
-                                            } 
+                                                ?> 
+                                               <td align="center">
+
+                                               </td>
+                                                <?php     
+                                            }
+                                            
+                                            
+                                            
                                            ?>
                                                
                                            
