--- a/views/carro/centerBox/paso3.phtml
+++ b/views/carro/centerBox/paso3.phtml
@@ -103,7 +103,7 @@
                                                                                 <td><?php if($arrayFechas[$contProductosP3] != null){echo $arrayFechas[$contProductosP3];} //echo Funciones::invertirFecha($objCar->getFecha_in(), '-', '/') ?></td>
                                                                                 <td class="text-muted"><?php if($objCar->getFecha_out()=='0000-00-00'){echo "";} else {echo Funciones::invertirFecha($objCar->getFecha_out(),'-','/');} ?></td>
                                                                                 <td><?php if($arrayVuelos[$contProductosP3]!= null){echo $arrayVuelos[$contProductosP3];} ?></td>
-                                                                                <td style="color: #DF5F00; font-weight: bold;"><?php echo $objCar->getTotal() ?></td>                                                                               
+                                                                                <td style="color: #DF5F00; font-weight: bold;"><?php echo number_format($objCar->getTotal(), 2) ?></td>                                                                               
                                                                                 <?php $totalCompras+=$objCar->getTotal()?>
                                                                             </tr>
                                                                             
@@ -115,7 +115,7 @@
                                                                             <tr>
                                                                                 
                                                                                 <td colspan="11" align="right"><h5>Total</h5></td>
-                                                                                <td  colspan="2" style="color: #DF5F00; font-weight: bold;"><h5><?php echo $totalCompras ?></h5></td>
+                                                                                <td  colspan="2" style="color: #DF5F00; font-weight: bold;"><h5><?php echo number_format($totalCompras, 2) ?></h5></td>
                                                                                 
                                                                             </tr>
                                                                         
